--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
             <li><strong>"Scrambling":</strong> Tones sound chaotic. Your brain is failing to find a pattern (this is the goal!).</li>
             <li><strong>"The Gallop":</strong> Tones seem to speed up. This is your brain trying to organize the sound.</li>
         </ul>
+
+        <h3>⚠️ Disclaimer</h3>
+        <p>This tool is not a replacement for professional medical advice. It is a wellness tool based on established acoustic principles. Always keep the volume low (barely audible). If your symptoms worsen, discontinue use immediately.</strong></p>
         <button class="btn btn-primary" onclick="closeModal('faqModal')">Got it</button>
     </div>
 </div>
@@ -477,3 +480,4 @@
 </script>
 </body>
 </html>
+
