--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#0f0f13">
     <title>NeuroAudio | Tinnitus Relief & Tracker</title>
+
+   <link rel="manifest" href="manifest.json">
+   <link rel="icon" type="image/jpeg" href="Neuro-Audio.jpg">
+
     <meta name="description" content="Free, open-source Acoustic CR Neuromodulation and Notched Noise therapy.">
     <style>
         :root { --primary: #00f2ea; --secondary: #ff0050; --bg: #0f0f13; --surface: #1a1a20; --text: #e0e0e0; --success: #00ff9d; }
